--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <input type="file" name="JFile" id="jFile" placeholder="JFile">
         <label for="jFile" id="Label">Uplad Database</label>
-        <input type="button" value="New Database " id="NewJson">
-        <label for="NewJson " class="label50 ">New Database</label>
+        <input type="button" value="New Database" id="NewJson">
+        <label for="NewJson" class="label50" id="NewDatabase">New Database</label>
         <input type="button" value="Submit" id="submit" disabled>
         <label for="submit" class="label50" id="submitbtn">Open Database</label>
 
@@ -26,7 +26,7 @@
 
     <div class="tableControl tableBreak" id="tableControl">
 
-        <input type="button" value="Download " id="Download " onClick="Download() ">
+        <input type="button" value="Download" id="Download" onClick="Download()">
         <input type="button" value="Reload" id="Reload">
         <input type="button" value="New User" id="NewUser" onClick="newUser()">
 
